syntax = "proto3";

option go_package = "github.com/begmaroman/beaconspot/proto/beaconspot;beaconspotproto";

package beaconspotproto;

import "eth/v1alpha1/validator.proto";
import "eth/v1alpha1/attestation.proto";
import "eth/v1alpha1/beacon_block.proto";
import "google/protobuf/empty.proto";
import "github.com/begmaroman/beaconspot/proto/health/health.proto";
import "github.com/begmaroman/beaconspot/proto/status/status.proto";

// BeaconSpotService represents service definitions of beacon spot
service BeaconSpotService {
    rpc Health(google.protobuf.Empty) returns (health.HealthResponse) {}
    rpc Ping(google.protobuf.Empty) returns (google.protobuf.Empty) {}

    // GetAttestation returns attestation data by the given request parameters.
    rpc GetAttestation(GetAttestationRequest) returns (GetAttestationResponse) {}
    // ProposeAttestation submits the given signed attestation to the beacon nodes.
    // This endpoint submits attestation to all nodes and waits for response from all of them.
    rpc ProposeAttestation(ProposeAttestationRequest) returns (ProposeAttestationResponse) {}

    // GetAggregateSelectionProof returns aggregation data by the given params.
    rpc GetAggregateSelectionProof(GetAggregateSelectionProofRequest) returns (GetAggregateSelectionProofResponse) {}
    // SubmitSignedAggregateSelectionProof submits signed aggregation data to the beacon nodes.
    // This endpoint submits aggregation to all nodes and waits for response from all of them.
    rpc SubmitSignedAggregateSelectionProof(SubmitSignedAggregateSelectionProofRequest) returns (SubmitSignedAggregateSelectionProofResponse) {}

    // GetBlock returns a block by the given request.
    rpc GetBlock(GetBlockRequest) returns (GetBlockResponse) {}
    // ProposeBlock proposes the given signed block to beacon nodes.
    // This endpoint submits signed block to all nodes and waits for response from all of them.
    rpc ProposeBlock(ProposeBlockRequest) returns (ProposeBlockResponse) {}

    // SubnetsSubscribe sends a request to nodes to subscribe on the given subnets.
    rpc SubnetsSubscribe(SubnetsSubscribeRequest) returns (SubnetsSubscribeResponse) {}
    // StreamDuties opens duties streaming from the beacon nodes.
    rpc StreamDuties(StreamDutiesRequest) returns (stream StreamDutiesResponse) {}
}

// GetAttestation operation
message GetAttestationRequest {
    uint64 slot = 1;
    uint64 committee_index = 2;
}

message GetAttestationResponse {
    oneof result {
        Status error = 1;
        ethereum.eth.v1alpha1.AttestationData attestation_data = 2;
    }
}

// ProposeAttestation operation
message ProposeAttestationRequest {
    ethereum.eth.v1alpha1.AttestationData attestation_data = 1;
    bytes aggregation_bits = 2;
    bytes signature = 3;
}

message ProposeAttestationResponse {
    oneof result {
        Status error = 1;
        google.protobuf.Empty empty = 2;
    }
}

// GetAggregateSelectionProof operation
message GetAggregateSelectionProofRequest {
    uint64 slot = 1;
    uint64 committee_index = 2;
    bytes public_key = 3;
    bytes signature = 4;
}

message GetAggregateSelectionProofResponse {
    oneof result {
        Status error = 1;
        ethereum.eth.v1alpha1.AggregateAttestationAndProof data = 2;
    }
}

// GetAggregateSelectionProof operation
message SubmitSignedAggregateSelectionProofRequest {
    bytes signature = 1;
    ethereum.eth.v1alpha1.AggregateAttestationAndProof data = 2;
}

message SubmitSignedAggregateSelectionProofResponse {
    oneof result {
        Status error = 1;
        google.protobuf.Empty empty = 2;
    }
}

// GetBlock operation
message GetBlockRequest {
    uint64 slot = 1;
    bytes randao_reveal = 2;
    bytes graffiti = 3;
}

message GetBlockResponse {
    oneof result {
        Status error = 1;
        ethereum.eth.v1alpha1.BeaconBlock beacon_block = 2;
    }
}

// ProposeBlock operation
message ProposeBlockRequest {
    bytes signature = 1;
    ethereum.eth.v1alpha1.BeaconBlock beacon_block = 2;
}

message ProposeBlockResponse {
    oneof result {
        Status error = 1;
        google.protobuf.Empty empty = 2;
    }
}

// SubnetsSubscribe operation
message SubnetsSubscribeRequest {
    repeated SubnetSubscription subscriptions = 1;
}

message SubnetsSubscribeResponse {
    oneof result {
        Status error = 1;
        google.protobuf.Empty empty = 2;
    }
}

message SubnetSubscription {
    uint64 validator_index = 1;
    uint64 committee_index = 2;
    uint64 committees_at_slot = 3;
    uint64 slot = 4;
    bool is_aggregator = 5;
}

// StreamDuties operation
message StreamDutiesRequest {
    repeated bytes public_keys = 1;
}

message StreamDutiesResponse {
    oneof result {
        Status error = 1;
        ethereum.eth.v1alpha1.DutiesResponse duties = 2;
    }
}
